--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,21 +1,3 @@
 # Introduction {#intro}
 
-You can label chapter and section titles using `{#label}` after them, e.g., we can reference Chapter \@ref(intro). If you do not manually label them, there will be automatic labels anyway, e.g., Chapter \@ref(methods).
-
-Figures and tables with captions will be placed in `figure` and `table` environments, respectively.
-
-```{r nice-fig, fig.cap='Here is a nice figure!', out.width='80%', fig.asp=.75, fig.align='center'}
-par(mar = c(4, 4, .1, .1))
-plot(pressure, type = 'b', pch = 19)
-```
-
-Reference a figure by its code chunk label with the `fig:` prefix, e.g., see Figure \@ref(fig:nice-fig). Similarly, you can reference tables generated from `knitr::kable()`, e.g., see Table \@ref(tab:nice-tab).
-
-```{r nice-tab, tidy=FALSE}
-knitr::kable(
-  head(iris, 20), caption = 'Here is a nice table!',
-  booktabs = TRUE
-)
-```
-
-You can write citations, too. For example, we are using the **bookdown** package [@R-bookdown] in this sample book, which was built on top of R Markdown and **knitr** [@xie2015].
+Bus Rapid Transit (BRT) systems make use of traffic signal prioritization and preemption (TSP) to increase system reliability, or the consistency with which these systems maintain established schedules. Studies have been done to determine the effects of prioritization on reliability, but less has been done to evaluate the effectiveness of changes to TSP on headway distributions. The UVX BRT system is a fairly new transit network in Utah County. This system makes use of signal prioritization not to maintain a set schedule of arrivals and departures, but rather to achieve consistent headways, or times between the arrivals of buses. What are the effects of variable signal prioritization to the headway distribution of this fleet of buses? Can altering signal priority timing affect the distribution of headway times, leading to more uniformity in arrivals? I plan to use a dataset of UVX arrival data provided by Utah Transit Authority (UTA) to evaluate the effects of signal priority on headways. I will then perform statistical analyses on the dataset to verify what if any of these changes are significant in achieving improved distributions.
