Add example bibtex citation
This will help keep your references clean.

--- a/02-literature.Rmd
+++ b/02-literature.Rmd
@@ -21,7 +21,7 @@ Adaptive signal priority involves real-time control adjustments made in order to
 
 Many studies have been done to determine the effects of various TSP strategies and configurations. In general, TSP strategies have been found to improve performance of transit systems such as BRT in a number of ways, including reduced delay, improved reliability, and mitigated effects on general traffic.  
 
-Ishaq &Cats (2020) used a set of trip data from a BRT system in Haifa, Israel to study the relation between service reliability, fleet management, and service utilization. They found that full and unconditional traffic signal priority given at all signals led to an 18% reduction in total vehicle trip time and contributed to a 60% reduction in the standard deviation of trip time. Similarly, Al-Deek et al. (2017) found that compared to several other TSP strategies, BRT with unconditional TSP provided the best travel time, speed, number of stops, and delay enhancements but resulted in significant crossing street delays, especially at major intersections with high traffic demand. While the unconditionalTSP strategy was found effective in termsof the delay of the BRT system, concerns rise over the effects on side-street traffic if unconditional priority consistently gives right of way to the buses. Liu et al. (2018) clarified that “signal priorities are provided more efficiently and on a more informed basis, with fewer impacts on other traffic operations than the use of unconditional TSP.”The implementation of unconditional TSP may only be practical where crossing street volumes are low, and must reasonably be done in conjunction with studies of how non-transit traffic is effected, as each system’s corridors have differing needs based off of demand and geometry.  
+@ISHAQ2020946 used a set of trip data from a BRT system in Haifa, Israel to study the relation between service reliability, fleet management, and service utilization. They found that full and unconditional traffic signal priority given at all signals led to an 18% reduction in total vehicle trip time and contributed to a 60% reduction in the standard deviation of trip time. Similarly, Al-Deek et al. (2017) found that compared to several other TSP strategies, BRT with unconditional TSP provided the best travel time, speed, number of stops, and delay enhancements but resulted in significant crossing street delays, especially at major intersections with high traffic demand. While the unconditionalTSP strategy was found effective in termsof the delay of the BRT system, concerns rise over the effects on side-street traffic if unconditional priority consistently gives right of way to the buses. Liu et al. (2018) clarified that “signal priorities are provided more efficiently and on a more informed basis, with fewer impacts on other traffic operations than the use of unconditional TSP.”The implementation of unconditional TSP may only be practical where crossing street volumes are low, and must reasonably be done in conjunction with studies of how non-transit traffic is effected, as each system’s corridors have differing needs based off of demand and geometry.  
 
 Liu et al. (2018) performed a study using transit operation data from a bus route found in Salt Lake County, Utah. A microscopic simulation was used to test GPS-based TSP scenarios. GPS-based TSP uses a GPS to achieve real-time (active) bus locating and advanced wireless communication technologies to achieve comprehensive analysis of operating information. Then a data-driven optimization method was implemented to understand the effects of flexible granting of signal priority across several models. They found that overall, BRT travel time decreased in all models where TSP was employed when compared to the base BRT model. Al-Deek et al. (2017) also used simulation models to compare several scenarios. Using field data from a corridor in Orlando, Florida, they found that BRT with conditional TSP that was engaged when the buses were 3 minutes behind experienced significantly improved travel times, average speed, and average total delay per vehicle, with minor effects on crossing street delays, when compared with BRT systems with no TSP or 5-minute conditional thresholds.These results indicate that TSP methods are effective in reducing delay. However, they ignore the important aspect of system reliability, whichis critical to improving running times and maintaining ridership.  
 
