--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,17 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.org/knitr/},
 }
+@article{ISHAQ2020946,
+title = "Designing bus rapid transit systems: Lessons on service reliability and operations",
+journal = "Case Studies on Transport Policy",
+volume = "8",
+number = "3",
+pages = "946 - 953",
+year = "2020",
+issn = "2213-624X",
+doi = "https://doi.org/10.1016/j.cstp.2020.05.001",
+url = "http://www.sciencedirect.com/science/article/pii/S2213624X18300701",
+author = "Robert Ishaq and Oded Cats",
+keywords = "Bus rapid transit, Service reliability, Transit operations",
+abstract = "Cities worldwide are looking for expanding the capacity of their public transport system while considering budget limitations. Bus Rapid Transit (BRT) systems are increasingly considered as alternatives for designing a mass public transport in mid-size cities in developed countries. While operations have been recognized as an important success factor, previous studies have focused on infrastructure design and planning principles of BRT. We study the operations of BRT related to service reliability and service utilization and derive lessons for planning and operations. The study is centered on the performance of the Matronit BRT system in Haifa, which is the first mass transit network of its kind in Israel. The inter-relation between service reliability, fleet management and service utilization are analysed. The speed and reliability improvements attained by the infrastructure and technological priority measures need to be complemented with control instruments to yield further gains for both service users and service provider."
+}
